--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,6 @@ h1 {
   font-size: 30px;
 }
 
-.options {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 20px;
-}
-
 .container {
   height: 100vh;
   width: 100vw;
@@ -57,33 +50,7 @@ h1 {
   font-size: 30px;
   text-align: center;
 }
-
-/*#board {
-  height: 30vh;
-  width: 30vw;
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 100px;
-  margin-top: 40px;
-}*/
-
-/*.box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--text);
-}
-
- come creare una div quadrata e responsive 
-https://spin.atomicobject.com/2015/07/14/css-responsive-square/
-
-
-.box:after {
-  content: "";
-  padding-bottom: 100%;
-}
-*/
-
+/*
 #restart {
   padding: 10px 20px;
   background-color: var(--btn-bg);
@@ -95,67 +62,17 @@ https://spin.atomicobject.com/2015/07/14/css-responsive-square/
   cursor: pointer;
   text-transform: uppercase;
 }
+*/
 
-
-/* select tag customization 
-https://www.w3schools.com/howto/howto_custom_select.asp
-*/ 
-
-/* The container must be positioned relative: */
-.custom-select {
-  position: relative;
-}
-
-.custom-select select {
-  display: none; /*hide original SELECT element: */
-}
-
-.select-selected {
-  background-color: DodgerBlue;
-}
-
-/* Style the arrow inside the select element: */
-.select-selected:after {
-  position: absolute;
-  content: "";
-  top: 14px;
-  right: 10px;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-  border-color: #fff transparent transparent transparent;
-}
-
-/* Point the arrow upwards when the select box is open (active): */
-.select-selected.select-arrow-active:after {
-  border-color: transparent transparent #fff transparent;
-  top: 7px;
-}
-
-/* style the items (options), including the selected item: */
-.select-items div,.select-selected {
-  color: #ffffff;
-  padding: 8px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+.options {
+  padding: 20px;
+  background-color: var(--btn-bg);
+  border: none;
+  border-radius: 20px;
+  color: var(--bg);
+  font-size: 40px;
+  font-weight: bold;
   cursor: pointer;
-}
-
-/* Style items (options): */
-.select-items {
-  position: absolute;
-  background-color: DodgerBlue;
-  top: 100%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
-
-/* Hide the items when the select box is closed: */
-.select-hide {
-  display: none;
-}
-
-.select-items div:hover, .same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  margin: 20px;
 }
